<resources>
    <string name="app_name">Story App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_label">Input Label</string>
    <string name="login">Login</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_desc">Please Login to continue</string>
    <string name="bg_vector_shape">Background vector shape</string>
    <string name="create_account">Create Account</string>
    <string name="hint_register_name">Name</string>
    <string name="hint_register_email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_register_password">Password</string>
    <string name="back">Back</string>
    <string name="story_photo">story photo</string>
    <string name="user_name">Unknown</string>
    <string name="add_story">Add Story</string>
    <string name="please_wait">Please Wait…</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="describe_your_story_with_this_photo">Describe your story with this photo</string>
    <string name="upload">Upload</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="photo_cannot_be_empty">Photo cannot be empty</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="success">Success</string>
    <string name="choose_a_photo">Choose a Photo</string>
    <string name="home">Home</string>
    <string name="story_description">Story Description</string>
    <string name="created_on">Created On</string>
    <string name="field_min_length">%s must be at least %d characters long</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_not_match">Password not match</string>
    <string name="title_activity_stories_map">Map Stories</string>
    <string name="address">address</string>
    <string name="retry">retry</string>
    <string name="timeout">Timeout</string>
    <string name="offline">Offline</string>
    <string name="reload">Reload</string>
    <string name="location">Location</string>
</resources>