<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_story_info_window"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:textColor="?android:attr/textColorPrimary"
        android:id="@+id/tv_iw_story_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="14sp"/>

    <TextView
        android:textColor="?android:attr/colorControlNormal"
        android:id="@+id/tv_iw_story_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/created_on"/>

    <TextView
        android:textColor="?android:attr/colorControlNormal"
        android:layout_marginTop="2dp"
        android:id="@+id/tv_iw_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"/>
</LinearLayout>