<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bg_vector_shape"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bg_vector_shape" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:id="@+id/tv_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/create_account"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <com.app.storyapp.customviews.StoryAppInputText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:hint="@string/hint_register_name"
                app:iconStart="@drawable/ic_person"
                app:layout_constraintTop_toBottomOf="@id/tv_create_account" />

            <com.app.storyapp.customviews.StoryAppInputText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textEmailAddress"
                app:hint="@string/hint_register_email"
                app:iconStart="@drawable/ic_email"
                app:layout_constraintTop_toBottomOf="@id/ed_register_name" />

            <com.app.storyapp.customviews.StoryAppInputText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                app:hint="@string/hint_register_password"
                app:iconStart="@drawable/ic_key"
                app:layout_constraintTop_toBottomOf="@id/ed_register_email"
                app:minLength="8" />

            <com.app.storyapp.customviews.StoryAppInputText
                android:id="@+id/ed_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                app:hint="Confirm Password"
                app:layout_constraintTop_toBottomOf="@id/ed_register_password"
                app:minLength="8" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:drawableTint="?attr/colorOnPrimary"
                android:paddingLeft="20dp"
                android:paddingTop="12dp"
                android:paddingRight="20dp"
                android:paddingBottom="12dp"
                android:text="@string/register"
                app:cornerRadius="999dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_register_confirm_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_main">

            <TextView
                android:id="@+id/tv_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_login"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/login"
                android:textColor="#673AB7"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_have_an_account"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/back"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorControlNormal" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>